...

        <controls:StatusOverlayView BindingContext="{Binding PrinterOverlayViewModel}"/>

        <HorizontalStackLayout Grid.Row="1">
			<Button Text="Volver" Command="{Binding VolverCommand}" Margin="10"/>
            <Button Text="Geo Pos" Command="{Binding TakeGPSCommand}" Margin="10"/>
            <Button Text="Llamar" Command="{Binding TakePhoneCommand}" Margin="10"/>
            <Button Text="Leer QR" Command="{Binding TakeQRCommand}" Margin="10"/>			
        </HorizontalStackLayout>

    </Grid>

</ContentPage>

